<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/page_background"

    android:padding="0dp">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/nav"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Modify Prompt"
       >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_margin="10sp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brand_name"
                    android:textColor="@color/secondary"
                    android:textSize="20sp"
                    android:textStyle="normal"></TextView>
                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="30sp"
                    android:text="@string/modify_prompts"
                    android:textStyle="bold"
                    android:textColor="@color/third"
                    android:textSize="25sp"
                    ></TextView>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_margin="5sp"
        android:backgroundTint="@color/button"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_margin="1sp"
            app:cardCornerRadius="9sp">



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ScrollView
                    android:id="@+id/scrollView3"
                    android:layout_width="match_parent"
                    android:layout_height="300sp"
                    android:minHeight="300sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                   >

                    <EditText

                        android:id="@+id/fullText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:backgroundTint="@color/white"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </ScrollView>
                <ImageView

                    android:id="@+id/show_full_transcription"
                    android:layout_width="40sp"
                    android:src="@mipmap/full_text_main"
                    android:layout_height="40sp"
                    android:padding="7sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                </ImageView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTranscriptionHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:gravity="start"
        app:layout_constraintVertical_bias="1"


        android:orientation="vertical"
        android:padding="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >



        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"

            android:orientation="horizontal"
            android:padding="0sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/save_p"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_margin="0sp"
                android:padding="10sp"
                android:src="@mipmap/save"
                android:visibility="gone">

            </ImageView>

            <ImageView
                android:id="@+id/share_p"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_margin="0sp"
                android:padding="10sp"
                android:src="@mipmap/share"


                >

            </ImageView>

            <ImageView
                android:id="@+id/copy_p"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_margin="0sp"
                android:padding="10sp"
                android:src="@mipmap/copy">

            </ImageView>

            <androidx.cardview.widget.CardView
                android:id="@+id/selectedcard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/secondary"
                app:cardCornerRadius="20sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4sp"
                    android:text="Selected"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone">

                </TextView>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_btn"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_margin="8sp"
            android:backgroundTint="@color/button"
            android:text="@string/update_transcription"
            android:textSize="15sp">

        </com.google.android.material.button.MaterialButton>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
